# solvex-backend

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  sample_output.json
contestiq_api/: __init__.py  auth.py  billing.py  coach_service.py  copilot_export.py  duel_problem_packs.py  duels.py  entitlements.py  errors.py  events_screening.py  feedback.py  feedback_analytics.py  gamification.py  handles.py  identity.py  jobs.py  judge0_client.py  leaderboards.py  legacy_compat.py  main.py  metadata.py  metrics.py  models.py  product_events.py  progress_report.py  rate_limit.py  safety.py  service.py  settings.py  share.py  storage.py  supabase_auth.py  teams.py  throttle.py  versions.py  weekly.py  workspace.py
contestiq_core/: __init__.py  config.py  models.py
docs/: deployment.md  identity_reconciliation.md  launch_checklist.md  load_test_report.md  model_limitations.md  runbook.md  supabase_auth.md
scripts/: check_migrations.py  loadtest.py  scan_secrets.py  seed_production_catalog.py
tests/: test_api.py  test_attempt_rollup.py  test_billing_entitlements.py  test_calibration_scenarios.py  test_cf_client.py  test_cf_sync.py  test_coach_security.py  test_copilot_evidence.py  test_duel_copilot_security.py  test_duels.py  test_duels_live.py  test_duels_shared_tests.py  test_episodes.py  test_feedback_analytics.py  test_gamification.py  test_gamification_g2.py  test_identity_security.py  test_launch.py  test_leaderboards.py  test_public_problems.py  test_recommendations.py  test_recommendations_v1.py  test_security_audit.py  (+10 more)
(+92 files in other folders)
